# glim_ros2

./: .gitignore  README.md  setup.sh
scripts/: analyze_loop_closure.py  analyze_trajectories.py  auto_tuning.py  auto_tuning_round2.py  save_path.py  stability_test_10runs.py
src/glim/: CMakeLists.txt  package.xml
src/glim/config/: config_global_mapping_cpu.json  config_global_mapping_gpu.json  config_odometry_ct.json  config_odometry_gpu.json  config_preprocess.json  config_ros.json  config_sensors.json  config_sub_mapping_gpu.json
src/glim_ext/: CMakeLists.txt
src/glim_ros/: .gitignore  CMakeLists.txt
src/glim_ros/include/glim_ros/: rgb_colorizer_ros.hpp  rviz_viewer.hpp
src/glim_ros/rviz/: glim_ros.rviz
src/glim_ros/scripts/: ply_to_pcd.py
src/glim_ros/src/: glim_rosbag.cpp  glim_rosnode.cpp  offline_viewer.cpp
src/glim_ros/src/glim_ros/: glim_ros.cpp  (+2 more)
src/gtsam_points/: CMakeLists.txt  package.xml
src/gtsam_points/include/gtsam_points/optimizers/: incremental_fixed_lag_smoother_with_fallback.hpp
src/gtsam_points/src/gtsam_points/factors/: integrated_vgicp_derivatives_inliers.cu
src/gtsam_points/src/gtsam_points/optimizers/: incremental_fixed_lag_smoother_ext_with_fallback.cpp
src/gtsam_points/src/gtsam_points/types/: gaussian_voxelmap_gpu.cu  gaussian_voxelmap_gpu_funcs.cu
src/iridescence/: CMakeLists.txt  package.xml
src/iridescence/src/guik/: imgui_application.cpp
stability_test_logs/: STABILITY_TEST_FINAL_REPORT.md  stability_test.py  stability_test_report_20251205_145633.txt  stability_test_results_20251205_145633.json
(+45 files in other folders)
